# gr55-access-rs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  THIRDPARTY.md
.github/workflows/: ci.yml
docs/: gr55-bootstrap.md  sysex-notes.md
docs/spec/: .gitignore  SOURCES.md
gr55/: Cargo.toml
gr55-core/: Cargo.toml  README.md  build.rs
gr55-core/data/: NOTICE.md  help.toml  midi.xml  midi.xsd
gr55-core/src/: address.rs  assign_targets.rs  codec.rs  default_patch.rs  g5l.rs  help.rs  inbound.rs  lib.rs  mfx_params.rs  mfx_tail_serde.rs  midi_map.rs  mod_params.rs  mod_tail_serde.rs  modeling_params.rs  modeling_tail_serde.rs  patch.rs  pcm_tail_params.rs  pcm_tail_serde.rs  pcm_tones.rs  sysex.rs  system.rs  test_support.rs
gr55-core/tests/fixtures/: NOTICE.md
gr55-wasm/: Cargo.toml
gr55-wasm/src/: lib.rs
gr55/src/: cli.rs  main.rs  midi.rs  yaml_io.rs
tools/: extract_assign_targets.py
tools/explore/: requirements.txt
